--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 ##############################
 text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url: "https://probivbot.net" # the base hostname & protocol for your site e.g. https://www.someone.com
+url: "https://probivbot.pro" # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: "/"
 title: Пробив номера - боты тг!
 description: > # this means to ignore newlines until "Language & timezone"
@@ -38,7 +38,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: botprobiva/botprobiva.github.io
+repository: nulloracle/nulloracle.github.io
 repository_tree: master
 
 
